--- a/result/2022-01-14.md
+++ b/result/2022-01-14.md
@@ -44,4 +44,5 @@
 44. [2022春节档已有11部电影](https://s.weibo.com//weibo?q=%232022%E6%98%A5%E8%8A%82%E6%A1%A3%E5%B7%B2%E6%9C%8911%E9%83%A8%E7%94%B5%E5%BD%B1%23&Refer=top) 135968
 45. [CBA](https://s.weibo.com//weibo?q=CBA&Refer=top) 107847
 46. [上海新增一处中风险地区](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E6%96%B0%E5%A2%9E%E4%B8%80%E5%A4%84%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%9C%B0%E5%8C%BA%23&Refer=top) 71625
-47. [三亚市委原书记童道驰被控受贿2.74亿余元](https://s.weibo.com//weibo?q=%23%E4%B8%89%E4%BA%9A%E5%B8%82%E5%A7%94%E5%8E%9F%E4%B9%A6%E8%AE%B0%E7%AB%A5%E9%81%93%E9%A9%B0%E8%A2%AB%E6%8E%A7%E5%8F%97%E8%B4%BF2.74%E4%BA%BF%E4%BD%99%E5%85%83%23&Refer=top) 47582
+47. [想拥有这样一张嘴](https://s.weibo.com//weibo?q=%23%E6%83%B3%E6%8B%A5%E6%9C%89%E8%BF%99%E6%A0%B7%E4%B8%80%E5%BC%A0%E5%98%B4%23&Refer=top) 60287
+48. [三亚市委原书记童道驰被控受贿2.74亿余元](https://s.weibo.com//weibo?q=%23%E4%B8%89%E4%BA%9A%E5%B8%82%E5%A7%94%E5%8E%9F%E4%B9%A6%E8%AE%B0%E7%AB%A5%E9%81%93%E9%A9%B0%E8%A2%AB%E6%8E%A7%E5%8F%97%E8%B4%BF2.74%E4%BA%BF%E4%BD%99%E5%85%83%23&Refer=top) 47582
