--- a/result/2022-01-14.md
+++ b/result/2022-01-14.md
@@ -48,3 +48,4 @@
 48. [上海新增一处中风险地区](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E6%96%B0%E5%A2%9E%E4%B8%80%E5%A4%84%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%9C%B0%E5%8C%BA%23&Refer=top) 71625
 49. [三亚市委原书记童道驰被控受贿2.74亿余元](https://s.weibo.com//weibo?q=%23%E4%B8%89%E4%BA%9A%E5%B8%82%E5%A7%94%E5%8E%9F%E4%B9%A6%E8%AE%B0%E7%AB%A5%E9%81%93%E9%A9%B0%E8%A2%AB%E6%8E%A7%E5%8F%97%E8%B4%BF2.74%E4%BA%BF%E4%BD%99%E5%85%83%23&Refer=top) 47582
 50. [接收快递要洗手](https://s.weibo.com//weibo?q=%23%E6%8E%A5%E6%94%B6%E5%BF%AB%E9%80%92%E8%A6%81%E6%B4%97%E6%89%8B%23&Refer=top) 38092
+51. [WBG WE](https://s.weibo.com//weibo?q=WBG%20WE&Refer=top) 27028
